# model_train

./: .gitignore  ACTION_GUIDE.md  BRANCH_ANALYSIS.md  CODE_ANALYSIS.md  Dockerfile  FINAL_BRANCH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MERGE_READY.txt  Makefile  PERFORMANCE_IMPROVEMENTS.md  README.md  SETUP_GUIDE.md  TASK_COMPLETION_SUMMARY.md  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements-yolo.txt  requirements.txt  setup.py
.dvc/: config
.github/workflows/: auto_train.yaml  ci.yaml  train.yaml
configs/: data_config.yaml  deployment_config.yaml  large_scale_training.yaml  model_config.yaml  training_config.yaml  yolo_config.yaml
configs/schemas/: image_schema.json  tabular_schema.json
docs/: API.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  SPEC.md
examples/: DATASET_FORMAT.md
examples/quick_start/: README.md
scripts/: auto_train.py  compute_data_hash.py  deploy.py  evaluate.py  export.py  generate_report.py  predict.py  prepare_data.py  serve.py  setup_data.py  train.py  validate_data.py  validate_structure.py
src/: __init__.py
src/inference/: predictor.py  serving.py
src/models/: __init__.py  base_model.py  registry.py  tabular_model.py  vision_model.py  yolo_model.py
src/observability/: __init__.py  experiment_tracker.py  health_check.py  logger.py  metrics_collector.py
src/training/: __init__.py  callbacks.py  distributed_trainer.py  metrics.py  trainer.py
src/utils/: config_loader.py  helpers.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_adapters.py  test_models.py  (+4 more)
(+11 files in other folders)
